<resources>
    <string name="app_name">Application</string>
    <string name="e_mail">E-mail</string>
    <string name="jelszo">Jelszó</string>
    <string name="belepes">Belépés</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="jelszoujra">Jelszó újra</string>
    <string name="ujfiok">Új fiók</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>

    <string-array name="item_names">
        <item>Smart Phone</item>
        <item>Laptop</item>
    </string-array>

    <array name="item_images">
    </array>

    <string-array name="spinner_items">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="spinner_items2">
        <item>Általános Iskola</item>
        <item>Érettségi</item>
        <item>Diploma</item>
        <item>Unknown</item>
    </string-array>

</resources>